# AXRecord

./: AXAll.h  AXAll.m  AXElementTracker.h  AXElementTracker.m  AXRecord.h  AXRecord.m  AXRecordController.h  AXRecordController.m  AXSelectedArray.h  AXSelectedArray.m  AppDelegate.h  AppDelegate.m  AppLogger.h  AppLogger.m  AppTracker.h  AppTracker.m  CMakeLists.txt  ConsoleController.h  ConsoleController.m  ConsoleMain.m  DisplayInfo.h  DisplayInfo.m  DisplaysGrabber.h  DisplaysGrabber.m  DisplaysInfoEvent.h  DisplaysInfoEvent.m  DisplaysTracker.h  DisplaysTracker.m  Info-CMake.plist  Info.plist  README.md  TableController.h  TableController.m  UIElementUtilities.h  UIElementUtilities.m  UIElementUtilitiesAdditions.h  UIElementUtilitiesAdditions.m  VnrWindowInfo.h  VnrWindowInfo.m  WindowGrabber.h  (+11 more)
Base.lproj/: MainMenu.xib
